update sdk to support java 8